# rustyknife

./: .gitignore  Cargo.toml  README.md
rustyknife-console/: Cargo.toml
rustyknife-console/src/: main.rs
rustyknife-z/: Cargo.toml
rustyknife-z/src/: bytes.rs  decoder.rs  dict.rs  errors.rs  globals.rs  header.rs  mem.rs  random.rs  zmachine.rs
rustyknife-z/tests/: games.rs
rustyknife/src/: obj.rs  zmachine.rs  zstring.rs
rustyknife/tests/: games.rs
