[package]
name = "rustyknife-z"
description = "Rusty Knife is a Rust implementation of the Inform Z-machine virtual machine, which powers old Infocom games like Zork."
version = "0.1.4"
authors = ["Thomas ten Cate <ttencate@gmail.com>"]
edition = "2018"
license-file = "../LICENSE.md"
readme = "../README.md"

[dependencies]
quick-error = "1.2.2"
rand = "0.8.5"
rand_pcg = { version = "0.9.0" }

[dev-dependencies]
difference = "2.0.0"

[features]
os_rng = ["rand_pcg/os_rng"]
